--- a/test.html
+++ b/test.html
@@ -12,21 +12,21 @@
 </div>
 <pre>
 <div id="source">
-저번 주 미달성 목록 및 이유
+저번 주 미*달*_성_ 목록 및 `이유`
 
 * TOEIC 인강 수강
 * ㅋㅋㅋㅋㅋㅋㅋㅋ 왜 안하지? ㅋㅋㅋㅋㅋㅋㅋㅋ
-* jszealot 발표 (혹은 발표 준비) 들
+* jszealot 발표 `(혹은 `발표 준비) 들
    * : 스터디의 공식적인 일정이 1주 미뤄졌다.
    * javaHoldem 버젼1 완료
 - 다른 팀원이 느리다.
 - comfycastle/blog 설정 기능
 - 작성 중
-   - comfycastle 프로젝트 로그 구현 간단 계획 및 설계
+   - comfycastle 프로젝*트 로그 *구현 간단 계획 및 설계
        - : 계획 및 간단 설계의 구상은 잡혔다. 문서화만 하면 된다.
 
 * 일요일에는 나가봤
-     * 자 피시방, 그마저도 두세 시간이고 거
+     * 자 피시방, 그__마저도 두__세 시간이고 거
      * 의 방에 누워 뒹굴뒹굴
 
  - 하는 것이 보통이다. 그
@@ -51,14 +51,16 @@ Jenkins 조사 / 발표
 관리 및# 설정 페이지 구현 완료
 comfycastle:prolog (가칭)
 간단한 설계 및 #제안서 작성
->>>     comfycastle:introduce
+> > >     comfycastle:introduce
 >     이 웹페이지가 뭐하는 곳인가 하는 간단한 소개 페이지를 만들자
-> > 간단하게 텍스트/리스트로만 구성
+>> 간단하게 텍스트/리스트로만 구성
 >     web-browser markdown decoder
 
 > 마크다운 문법으로 작성된 글을 html로 변환하는 자바스크립트 클래스 구현
 >> 
 우선순위
+
+[id]: comfycastle.net
 
 (수업 및 과제 > jszealot >= comfycastle:prolog > markdown decoder >= comfycastle:blog >= comfycastle:introduce >>> javaHoldem >>>>> 기타)
 아래는 참고 사항
@@ -76,7 +78,7 @@ comfycastle:prolog (가칭)
 * ㅋqwerfvavd
 
 
-
+<em>나의소원은이제이루어질것이다</em>
 
 
 
