모든 인라인 요소 해석/번역 완료 소스코드 리팩토링   - 필요 없는 멤버 상수 삭제   - 멤버 함수 match 코드 최적화   - 중복되는 소스코드 제거

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <div id="target">
 </div>
 <pre>
-<div id="source">
+<textarea id="source">
 저번 주 미*달*_성_ 목록 및 `이유`
 
 * TOEIC 인강 수강
@@ -34,11 +34,11 @@
    - anj
 
 
-이번 주
+이번 주  
 사이버 강의 수강 / 수업 및 과제
 
 # TOEIC #####인강
-# jszea#lot
+### jszea#lot
 
 Jenkins 조사 / 발표
 'CI 소개' 발표
@@ -60,10 +60,21 @@ comfycastle:prolog (가칭)
 >> 
 우선순위
 
-[id]: comfycastle.net
+[링크1] (http://comfycastle.net "뭐")
+[링크2] (comfycastle.net/blog)
+
+[링크3][id2]
+[id1]: sample.jpg
+[id2]: http://google.com
+
+<http://www.daum.net/>
 
 (수업 및 과제 > jszealot >= comfycastle:prolog > markdown decoder >= comfycastle:blog >= comfycastle:introduce >>> javaHoldem >>>>> 기타)
 아래는 참고 사항
+
+![이미지1] (sample.jpg "ㅋ")
+![이미지2] (sample.jpg)
+![id1][]
 
 달성한 것은 삭선 및 날짜를 기록한다.
 달성하지 못한 것은 다음 주 계획 작성 시 이유를 명시한다.
@@ -154,7 +165,7 @@ _                  _ _
 ㅋㅋㅋ
 ㅋㅋ
 
-</div>
+</textarea>
 </pre>
 
 </body>
