참조 스타일의 링크/이미지 기능 문제점 수정   - 선택적 인자로 맨 뒤에 title 속성 값이 들어간 스타일     [id]: url "title"     적용되지 않던 점 수정   - 선택적으로 주소를 <>로 감쌀 수 있는 기능     [id]: <url> "title"     적용되지 않던 점 수정
주석 추가

번역할 문자열을 갖고 있는 엘리먼트를 생성자의 인자로 받던 방식에서
-> 번역할 문자열 자체를 translate 호출 시 인자로 받는 방식으로 변경

사용 예제 코드 주석 처리

--- a/test.html
+++ b/test.html
@@ -64,8 +64,8 @@ comfycastle:prolog (가칭)
 [링크2] (comfycastle.net/blog)
 
 [링크3][id2]
-[id1]: sample.jpg
-[id2]: http://google.com
+[id1]: sample.jpg "샤싣"
+[id2]: <http://google.com> 'title'
 
 <http://www.daum.net/>
 
