--- a/test.html
+++ b/test.html
@@ -165,6 +165,36 @@ _                  _ _
 ㅋㅋㅋ
 ㅋㅋ
 
+
+뭐 어차피 대부분 한 일이 시험공부라 4일이 밀렸는데도 뭐 쓸 게 별로 없네.
+
+###### 한 일
+
+ - jszealot
+ - 시험 공부 및 시험
+  - 네 과목 시험을 치룬 현재 예상 평균 (100점 만점 기준) 70점 정도
+ - handmade markdown decoder
+  - 기본적인 기능은 구현 완료 (tagging 0.1)
+     - 인라인 요소 해석/번역 모두 구현
+     - 블록 요소도 거의 전부 구현
+     - 단, 블록 요소의 암덩어리(목록 내부에 블록 요소 중첩 등등)들을 처리 못했다.
+  - 블로그에 적용해보니 인터페이스가 생각보다 불편하다. 개선이 필요하다.
+ - blog
+ - hmd 적용
+     - '자동줄바꿈' 기능을 일단 '마크다운 적용 우무' 기능으로 사용한다.
+     - 금요일에 제대로 수정해보자
+
+###### 할 일
+ - 시험 공부 및 시험
+  - 목요일 하나 토요일 하나 다음주목요일 하나
+ - hmd
+  - 인터페이스 개선
+  - 문서 최신화
+  - 블록 요소 암덩어리 구현
+  - 소스 코드 리팩토링
+
+일일이 태그 다는 것 보다는 편하다 확실히.
+
 </textarea>
 </pre>
 
