번역 기능 실행시마다 이전 번역 결과 초기화 목록 요소 번역 부분에서의 에러 수정 순서적 목록 요소의 번역 결과가 비순서적 목록 요소의 결과와 같던 것 수정

--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
 <pre>
 <textarea id="source">
 저번 주 미*달*_성_ 목록 및 `이유`
+====
 
 * TOEIC 인강 수강
 * ㅋㅋㅋㅋㅋㅋㅋㅋ 왜 안하지? ㅋㅋㅋㅋㅋㅋㅋㅋ
@@ -31,7 +32,7 @@
 
  - 하는 것이 보통이다. 그
  - 것을 바꿔보고자 점심을 먹고 근처 카페로 나왔다. 어제까지의 일주일을 정리해보고, 평소 못 읽은 책도 좀 읽어보자는 생각으로.
-   - anj
+                    anj
 
 
 이번 주  
@@ -164,36 +165,6 @@ _                  _ _
 ㅋㅋㅋ
 ㅋㅋㅋ
 ㅋㅋ
-
-
-뭐 어차피 대부분 한 일이 시험공부라 4일이 밀렸는데도 뭐 쓸 게 별로 없네.
-
-###### 한 일
-
- - jszealot
- - 시험 공부 및 시험
-  - 네 과목 시험을 치룬 현재 예상 평균 (100점 만점 기준) 70점 정도
- - handmade markdown decoder
-  - 기본적인 기능은 구현 완료 (tagging 0.1)
-     - 인라인 요소 해석/번역 모두 구현
-     - 블록 요소도 거의 전부 구현
-     - 단, 블록 요소의 암덩어리(목록 내부에 블록 요소 중첩 등등)들을 처리 못했다.
-  - 블로그에 적용해보니 인터페이스가 생각보다 불편하다. 개선이 필요하다.
- - blog
- - hmd 적용
-     - '자동줄바꿈' 기능을 일단 '마크다운 적용 우무' 기능으로 사용한다.
-     - 금요일에 제대로 수정해보자
-
-###### 할 일
- - 시험 공부 및 시험
-  - 목요일 하나 토요일 하나 다음주목요일 하나
- - hmd
-  - 인터페이스 개선
-  - 문서 최신화
-  - 블록 요소 암덩어리 구현
-  - 소스 코드 리팩토링
-
-일일이 태그 다는 것 보다는 편하다 확실히.
 
 </textarea>
 </pre>
