hmd 샘플 페이지 수정

--- a/sample/index.html
+++ b/sample/index.html
@@ -26,7 +26,7 @@
 
 - 마크다운 문법의 사용 방법이 궁금하신 분은 [위키백과:마크다운][wiki]을 참고해주세요.
 - 마크다운 문법의 세부 상세가 궁금하신 분은 [이 사이트][markdown]를 참고해주세요. (영문)
-- hmd에 대해 궁금하신 분은 [hmd의 git 원격 저장소][hmd git] 혹은 [블로그 글][hmd post]을 참고해주세요.
+- hmd에 대해 궁금하신 분은 [hmd의 git 원격 저장소][hmd git]를 참고해주세요.
 
 버그 혹은 문의사항은 ricale@hanmail.net으로 문의주세요.
 
