--- a/sample/index.html
+++ b/sample/index.html
@@ -9,6 +9,23 @@
     $(document).ready(function() {
         RICALE.hmd.run('#source', '#target');
     });
+
+    string = "이 페이지는 __hmd__ ,,(handmade markdown decoder, v0.2.2),,를 사용한 마크다운 웹 에디터입니다.\n"
+             + "마크다운 문법의 글을 HTML 문법으로 변환, 화면에 출력하는 기능을 갖고 있습니다.\n"
+             + "\n"
+             + "- 마크다운 문법의 사용 방법이 궁금하신 분은 [위키백과:마크다운][wiki]을 참고해주세요.\n"
+             + "- 마크다운 문법의 세부 상세가 궁금하신 분은 [이 사이트][markdown]를 참고해주세요. (영문)\n"
+             + "- hmd에 대해 궁금하신 분은 [hmd의 git 원격 저장소][hmd git]를 참고해주세요.\n"
+             + "- 아직 여러 블록 엘리먼트 문법이 겹칠 때에는 매끄러운 변환이 되지 않습니다.\n"
+             + "\n"
+             + "버그 혹은 문의사항은 kim.kangseong@gmail.com으로 문의주세요.\n"
+             + "\n"
+             + "[wiki]: http://ko.wikipedia.org/wiki/마크다운\n"
+             + "[markdown]: http://daringfireball.net/projects/markdown/syntax\n"
+             + "[hmd git]: https://bitbucket.org/ricale/hmd\n"
+
+    console.log(RICALE.hmd.decode(string));
+
     </script>
 </head>
 
