hmd.ricaleinline.js 버그 수정

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 - hmd에 대해 궁금하신 분은 [hmd의 git 원격 저장소][hmd git]를 참고해주세요.
 - 아직 여러 블록 엘리먼트 문법이 겹칠 때에는 매끄러운 변환이 되지 않습니다.
 
-버그 혹은 문의사항은 kim.kangseong@gmail.com으로 문의주세요.
+버그 혹은 문의사항은 ricale@ricalest.net으로 문의주세요.
 
 [wiki]: http://ko.wikipedia.org/wiki/마크다운
 [markdown]: http://daringfireball.net/projects/markdown/syntax
