링크/이미지 주소와 인라인 코드 요소 내부가 번역되는 문제 수정 중

--- a/index.html
+++ b/index.html
@@ -33,6 +33,39 @@
 [wiki]: http://ko.wikipedia.org/wiki/마크다운
 [markdown]: http://daringfireball.net/projects/markdown/syntax
 [hmd git]: https://bitbucket.org/ricale/hmd
+
+매일 _칭찬받고_ _싶어하는_ 어린아이 마냥
+밤새 __고민했던__ __기록들을__ 꺼내놓지만
+부끄러워 *펜을* *잡은* 손을 숨기네
+소심한 **소년의** **고백이나마** 춤을 추는 밤
+홀로 `갇힌` `굳게` 닫힌 맘의 방에
+조심스레 ,,노크하고,, ,,발을,, 들여놔
+감당하지 --못할거라면-- --애초부터-- 시작을 말라던
+별의 ^^속삭임에^^ ^^문득^^ 떠오르는 밤
+밥 <http://www.ricalest.net> 먹듯이 가사를 쓰고 지우길 반복해  
+고집불통 <팔자가 사나운 삶이 박복해
+스트레스 ``피해망상`` ``애정결핍`` 불면증은
+매일 밤마다 남김말을 들어주는 밤
+인기와는 비례해서 늘어만 가는 기대
+잊혀질까 두려워 난 한치앞을 모르는 미래
+블링블링한 차와 예쁜 여자 돈과 명예
+따위를 바라지는 않아 (바라지는 않아)
+상관없다 사는 것이 인생일지언데
+왜 난 떠나가며 그리 목을 매는 건지 몰라
+오늘 내일 하는 나의 삶은 하루살이
+마치 바람앞에 흔들리는 촛불과도 같아
+한번 왔다 가는 것이 인생일지언데
+왜 난 가진것에 그리 목을 매는 건지 몰라
+소유할 수 없는 나의 삶은 일장춘몽
+마치 자고나면 사라지는 신기루와 같아
+잃은 것 보다는 아직 잃을게 많아서
+내게 남은 시간이 간절하게 더디 가기를
+가질 것 보다는 버릴 것이 많아서
+내게 남은 욕심이 하나 둘 씩 사라지기를
+나 쉽게 기도하지 신의 존재를 믿지 않으면서
+쉽게 고백하지 당신보다 자신을 아끼면서
+이기적인 바람 이런 나라도 괜찮다면
+나의 바람이 들린다면 내게 시간을 줘
     </textarea>
     <div id="target" class="decorate_link">
     </div>
