링크/이미지 주소와 인라인 코드 요소 내부가 번역되는 문제 수정

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 감당하지 --못할거라면-- --애초부터-- 시작을 말라던
 별의 ^^속삭임에^^ ^^문득^^ 떠오르는 밤
 밥 <http://www.ricalest.net> 먹듯이 가사를 쓰고 지우길 반복해  
+[hihihi](http://daum.net)
 고집불통 <팔자가 사나운 삶이 박복해
 스트레스 ``피해망상`` ``애정결핍`` 불면증은
 매일 밤마다 남김말을 들어주는 밤
