Update add inline element regexp method Refactorying

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script type="text/javascript" src="hmd.ricaleinline.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
-        RICALE.hmd.run('#source', '#target');
+        hmd.decode('#source');
+        hmd.run('#source', '#target');
     });
+
     </script>
 </head>
 
@@ -34,39 +36,421 @@
 [markdown]: http://daringfireball.net/projects/markdown/syntax
 [hmd git]: https://bitbucket.org/ricale/hmd
 
-매일 _칭찬받고_ _싶어하는_ 어린아이 마냥
-밤새 __고민했던__ __기록들을__ 꺼내놓지만
-부끄러워 *펜을* *잡은* 손을 숨기네
-소심한 **소년의** **고백이나마** 춤을 추는 밤
-홀로 `갇힌` `굳게` 닫힌 맘의 방에
-조심스레 ,,노크하고,, ,,발을,, 들여놔
-감당하지 --못할거라면-- --애초부터-- 시작을 말라던
-별의 ^^속삭임에^^ ^^문득^^ 떠오르는 밤
-밥 <http://www.ricalest.net> 먹듯이 가사를 쓰고 지우길 반복해  
-[hihihi](http://daum.net)
-고집불통 <팔자가 사나운 삶이 박복해
-스트레스 ``피해망상`` ``애정결핍`` 불면증은
-매일 밤마다 남김말을 들어주는 밤
-인기와는 비례해서 늘어만 가는 기대
-잊혀질까 두려워 난 한치앞을 모르는 미래
-블링블링한 차와 예쁜 여자 돈과 명예
-따위를 바라지는 않아 (바라지는 않아)
-상관없다 사는 것이 인생일지언데
-왜 난 떠나가며 그리 목을 매는 건지 몰라
-오늘 내일 하는 나의 삶은 하루살이
-마치 바람앞에 흔들리는 촛불과도 같아
-한번 왔다 가는 것이 인생일지언데
-왜 난 가진것에 그리 목을 매는 건지 몰라
-소유할 수 없는 나의 삶은 일장춘몽
-마치 자고나면 사라지는 신기루와 같아
-잃은 것 보다는 아직 잃을게 많아서
-내게 남은 시간이 간절하게 더디 가기를
-가질 것 보다는 버릴 것이 많아서
-내게 남은 욕심이 하나 둘 씩 사라지기를
-나 쉽게 기도하지 신의 존재를 믿지 않으면서
-쉽게 고백하지 당신보다 자신을 아끼면서
-이기적인 바람 이런 나라도 괜찮다면
-나의 바람이 들린다면 내게 시간을 줘
+# README
+
+1. 기본 정보
+2. 개요
+3. 사용 방법
+4. hmd의 마크다운 문법
+5. 추가 요소
+6. 문서 정보
+
+## 1. 기본 정보
+
+* Dependency : JavaScript (jQuery)
+* Writer : ricale (ricale@ricalest.net)
+* Version : 0.2.3.1
+
+## 2. 개요
+
+hmd ,,(handmade markdown decoder),,는 마크다운 문법을 HTML 형식으로 출력해주는 자바스크립트 컴포넌트이다.
+
+마크다운 문법은 기본적으로 [이 곳][syntax]의 문법을 따른다. 단 근본적인 문법을 변경하지 않는 선에서 세부사항이 변경될 수 있다. 현재 hmd에서의 마크다운 문법의 상세는 이 문서에서 확인할 수 있다.
+
+이 문서는 hmd의 [git 저장소의 README][git] 와 [작성자의 블로그에 작성된 글][blog]에서 볼 수 있다.
+
+[syntax]: http://daringfireball.net/projects/markdown/syntax
+[git]: https://bitbucket.org/ricale/hmd
+[blog]: http://weblog.ricalest.net/4
+
+### 2.1. 문제점
+
+현재 여러 블록 요소가 중첩되는 형식으로 작성하면 정상적인 결과를 반환하지 않는다. 추후 개선될 예정이다.
+
+## 3. 사용 방법
+
+### 3.1. run
+
+    hmd.run(sourceTextareaSelector, targetElementSelector);
+
++ `sourceTextareaSelector`는 마크다운 문법의 글이 작성되어있는 textarea의 셀렉터이다.
++ `targetElementSelector`는 HTML로 번역된 결과가 출력될 HTML 요소의 셀렉터이다.
++ 이 메서드를 실행하는 순간 번역이 실행되고 이 후에는 textarea에서 키보드 입력이 있을때마다 textarea의 내용이 다시 번역된다.
+
+### 3.2. decode
+
+    hmd.decode(text);
+
++ `text`는 마크다운 문법으로 작성된 글(문자열)이다.
++ HTML로 변역한 결과 문자열을 반환한다.
+
+### 3.3. setAdditionalDecodeInlineFunction
+
+추가적으로, 아래의 코드로 인라인 문법을 추가할 수 있다. (이는 필수적인 요소가 아니다.)
+
+    hmd.addInlineRules(array);
+
+작성 예시는 아래와 같다.
+
+    hmd.addInlineRules([
+        [/--([^-\s]{1,2}|-[^-\s]|[^-\s]-|(?:[^\s].+?[^\s]))--/g, '<del>$1</del>'],
+        [/,,([^,\s]{1,2}|,[^,\s]|[^,\s],|(?:[^\s].+?[^\s])),,/g,          '<sub>$1</sub>'],
+        [/\^\^([^\^\s]{1,2}|\^[^\^\s]|[^\^\s]\^|(?:[^\s].+?[^\s]))\^\^/g, '<sup>$1</sup>']
+    ]);
+
+## 4. hmd의 마크다운 문법
+
+1. 블록 요소 Block Element
+    1. 문단 `p`
+    2. 제목 `h1 h2 h3 h4 h5 h6`
+    3. 인용 `blockquote`
+    4. 목록
+        1. 비순서적 목록 `ul`
+        2. 순서적 목록 `ol`
+        3. 목록 공통
+        4. 목록 - 인용 블록 반복 중첩 버그
+    5. 코드 블록 `pre` + `code`
+    6. 수평선 hr
+2. 인라인 요소 Inline Element
+    1. 링크 `a`
+        1. 인라인 스타일
+        2. 레퍼런스 스타일
+        3. 자동 링크
+    2. 강조 `em`, `strong`
+    3. 코드 `code`
+    4. 이미지 `img`
+    5. 줄바꿈 `br`
+    6. 탈출 문자 `\`
+
+### 4.1. 블록 요소
+
+#### 4.1.1. 문단
+
+문단은 하나 이상의 빈 문장으로 나뉜다. 빈 문장은 아무것도 포함하지 않거나 공백(space, tab)만을 포함한 문장이다.
+
+줄을 아무리 띄어도 문단p으로 적용될 뿐 줄바꿈br이 적용되지 않는다. 줄바꿈을 적용하길 원한다면 줄의 마지막에 공백을 두 개 이상 넣으면 된다.
+
+#### 4.1.2. 제목
+
+\#를 사용한다.
+
+>     # h1스타일의제목
+>     ## h2스타일의제목
+>     ### h3스타일의제목
+>     #### h4스타일의제목
+>     ##### h5스타일의제목
+>     ###### h6스타일의제목
+
+필수적이지는 않지만, 닫는 것도 가능하다. 닫을 때 #의 개수는 몇 개든 상관없다.
+
+>     # 닫기 #
+>     ## 또 닫기 ##
+>     ### 다시 닫기 #####
+
+===== 스타일과 ----- 스타일도 있다.
+
+>     h1스타일의제목  
+>     =========== (=의 개수는 몇 개든 상관없다)
+>     h2스타일의제목  
+>     ----------- (-의 개수는 몇 개든 상관없다)
+
+#### 4.1.3. 인용
+
+\> 를 사용한다. > 뒤에 반드시 공백이 하나 이상 있어야 한다. 아니라면 인용 문법이 아닌 > 문자로 인식한다. (다른 마크다운 에디터 중에는 내용과 공백이 모두 없으면 >만 써도 인용 문법으로 인식하는 것도 있다.)
+
+>     > blockquote스타일
+>     >
+>     > 인용 내에서의 문단 나눔도 빈 줄로 한다.
+>     > 다른 블록 요소의 중첩도 가능하다.
+
+#### 4.1.4. 목록
+
+##### 4.1.4.1. 비순서적 목록
+
+\* 또는
+
+>     * 목록하나
+>     * 둘
+>     * 셋
+
+\- 또는
+
+>     - 하나
+>     - 둘
+>     - 셋
+
+\+ 를 사용한다.
+
+>     + 하나
+>     + 둘
+>     + 셋
+
+##### 4.1.4.2. 순서적 목록
+
+숫자를 사용한다.
+
+>     1. 순서 목록
+>     2. 둘
+>     3. 셋
+
+숫자의 순서는 틀려도 상관없다.
+
+>     3. 순서
+>     2. 목록
+>     100. 이다
+
+##### 4.1.4.3. 목록 공통
+
+목록 내에서 줄을 바꿔도 줄바꿈이 적용되지 않는다.
+
+>     1. 순서
+>     목록
+>     이다
+
+###### 결과
+
+> 1. 순서
+>  목록
+>  이다.
+
+줄바꿈을 유도하려면 줄 끝에 공백 두 개를 넣거나 빈 줄을 넣어 문단을 나눠야 한다.
+
+>     1. 순서
+> 
+>      목록
+> 
+>      이다
+
+###### 결과
+
+> 1. 순서
+> 
+>  목록
+> 
+>  이다
+ 
+들여쓰기에 주의하라. 한 칸 이상의 들여쓰기가 없다면 해당 줄을 목록의 연장으로 판단하지 않고 새로운 문단으로 판단한다.
+
+목록에 코드 블록을 넣고 싶다면 빈 줄 이후 기존 코드 블록의 두 배(8개)의 공백을 주면 된다. 
+
+>     1. 테스트
+> 
+>             코드블록테스트
+
+###### 결과
+
+> 1. 테스트
+> 
+>         코드블록 테스트
+
+단, 이는 목록이 중첩되지 않았을 경우이고 목록이 여러번 중첩되었을 경우에는 _8 + (목록 중첩 횟수 - 1) * 4_ 개의 공백을 주면 된다.
+
+목록 요소의 각 레벨의 들여쓰기는 아래와 같다. 기준에 맞지 않을 시에는 목록 요소로서 표현되지 않거나, 의도와 다르게 표현될 수 있다. 들여쓰기 단위는 공백(space)이며, 탭(tab)은 네 개의 공백으로 계산된다.
+
+* 레벨 1 - 0개 ~ 3개
+* 레벨 2 - (레벨 1의 공백 + 1)개 ~ 7개
+- 레벨 3 - (레벨 2의 공백 + 1)개 ~ 11개
+* 레벨 n - (레벨 n-1의 공백 + 1)개 ~ (n * 4 - 1)개
+
+##### 4.1.4.4. 목록 - 인용 블록 반복 중첩 버그
+
+현재 목록 요소와 인용 블록 요소를 중첩하여 사용 시의 버그가 있다. 인용 - 목록 혹은 목록 - 인용 한 번 중첩은 정확하게 구현되어 있으나 한 번 이상의 중첩에서는 작성자의 의도와 다르게 HTML로 번역될 수 있다.
+
+#### 4.1.5. 코드 블록
+
+공백 네 개로 들여쓰기 한다.
+
+>         테스트
+>         코드블록테스트
+
+###### 결과
+
+    테스트
+    코드블록테스트
+
+코드 블록 내의 모습은 마크다운 문법에 상관 없이 그대로 출력된다.
+
+#### 4.1.6. 수평선
+
+\- 또는 \_ 또는 \*을 한 줄에 셋 이상 입력한다.
+
+>     ---
+>     ___
+>     ***
+
+###### 결과
+
+> ---
+> ___
+> ***
+
+문자들 사이에 공백이 포함되어 있어도 가능하다.
+
+>     -   -    -
+>       _     _ _
+>      *  *  *
+
+###### 결과
+
+> -   -    -
+>   _     _ _
+>  *  *  *
+
+### 4.2. 인라인 요소
+
+#### 4.2.1. 링크
+
+##### 4.2.1.1. 인라인 스타일
+
+아래의 스타일을 사용한다. 제목은 생략할 수 있다.
+
+>     [텍스트](http://google.com "제목")
+>     [텍스트](http://google.com)
+>     [텍스트] (http://google.com)
+
+[]와 () 사이에 공백이 있어도 된다.
+
+##### 4.2.1.2. 레퍼런스 스타일
+
+링크 텍스트와 url 부분을 나누어 쓴다. 주소는 <>로 감싸도 된다. 제목은 "" 혹은 '' 혹은 ()로 감싸거나 생략할 수 있다.
+
+>     [텍스트][id]
+>     [id]: http://google.com "제목"
+>     [id]: http://google.com '제목'
+>     [id]: http://google.com (제목)
+>     [id]: <http://google.com> "제목"
+>     [id]: <http://google.com> '제목'
+>     [id]: <http://google.com> (제목)
+>     [id]: http://google.com
+>     [id]: <http://google.com>
+
+텍스트와 아이디 사이에 공백이 허용된다.
+
+>     [텍스트] [id]
+
+아이디를 생략할 수도 있는데 아이디를 생략하면 텍스트가 아이디 역할까지 맡는다.
+
+>     [텍스트][]
+>     [텍스트]: http://google.com
+
+##### 4.2.1.3. 자동 링크
+
+url을 <>로 감싸면 자동으로 링크가 적용된다.
+
+>     <http://google.com>
+
+_단 <> 안의 문자열이 http:// 혹은 https:// 으로 시작해야지만 적용된다._ 이는 본래 문법에 있는 것인지는 확인되지 않고, hmd에서는 적용된 사항이다.
+
+표준에 의하면 이메일 링크는 자동 암호화한다는 데, 뭔지 모르겠다. hmd에는 해당 사항을 지원하지 않는다.
+
+#### 4.2.2. 강조
+
+글을 * 혹은 _로 감싸면 em 효과가 적용된다.
+
+>     _내용_
+>     *내용*
+
+글을 ** 혹은 __로 감싸면 strong 효과가 적용된다.
+
+>     __내용__
+>     **내용**
+
+둘을 섞어 쓰면 안되지만 일부 에디터에서는 아래처럼 섞어 쓰기도 한다. _hmd는 섞어 쓰는 것을 지원하지 않는다._
+
+>     _*지원하지**
+>     _*않는_*
+>     __문법_*
+>     *이다_
+
+#### 4.2.3. 코드
+
+\`로 감싸면 코드 태그가 적용된다.
+
+>     `코드`
+
+코드 내부에서 \`문자를 사용할 때를 위해 \`\`로 감쌀 수도 있다.
+
+>     ``코드``
+
+코드의 첫/마지막 글자에 \`를 사용하고 싶다면 한 칸 공백을 준다.
+
+>     `` `코드` ``
+
+#### 4.2.4. 이미지
+
+맨 앞에 !가 붙는 것과 []안의 텍스트가 alt 역할을 한다는 것만 빼면 링크와 동일하다. 상세 내용은 생략한다. 링크를 참고 바란다.
+
+#### 4.2.5. 줄바꿈
+
+줄의 마지막에 공백을 연속으로 두 개 이상 입력하면 된다.
+
+>     줄바꿈
+>     테스트1
+> 
+>     줄바꿈  
+>     테스트2
+
+###### 결과
+
+> 줄바꿈
+테스트1
+
+> 줄바꿈  
+테스트2
+
+#### 4.2.6. 탈출 문자
+
+마크다운 문법에 쓰이는 문자들 ('\-', '\_', '\+', '\#', '\>', '\.', '\*', '\\', '\[', '\]', '\(', '\)', '\`') 을 마크다운 문법이 적용될 위치에서 마크다운 문법을 적용시키지 않게 사용하고 싶다면 앞에 백슬러시(\\)를 붙이면 된다.
+
+>     \# 백슬래시 테스트
+
+###### 결과
+
+> \# 백슬래시 테스트
+
+## 5. 추가 요소
+
+1. hmd.ricaleinline.js
+
+### 5.1. hmd.ricaleinline
+
+1. 개요
+2. 문법
+ 1. 삭선 del
+ 2. 위 첨자 sup
+ 3. 아래 첨자 sub
+
+#### 5.1.1. 개요
+
++ 인라인 문법 추가 기능의 테스트를 위해 작성하였다.
++ 기존의 마크다운에서 지원하지 않는 del, sup, sub 태그에 매칭되는 문법을 추가하였다.
+
+#### 5.1.2. 문법
+
+##### 5.1.2.1. 삭선
+
+--로 감싸면 del이 적용된다.
+
+>     --내용--
+
+##### 5.1.2.2. 위 첨자
+
+\^\^로 감싸면 sup가 적용된다.
+
+>     ^^내용^^
+
+##### 5.1.2.3. 아래 첨자
+
+,,로 감싸면 sub가 적용된다.
+
+>     ,,내용,,
+
+## 6. 문서 정보
+
+- 작성자 : ricale
+- 문서버전 : hmd 0.2.3.1 1
+- 작성일 : 2014. 2. 22.
+
     </textarea>
     <div id="target" class="decorate_link">
     </div>
