Fix codeblock bug - 코드블록의 내용 중간에 공백 줄이 있으면 코드블록이 분리되는 버그 수정

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div id="header">
-        <h1>:hme</h1>
-        <div class="desc">handmade markdown editor</div>
+        <h1>hmd</h1>
+        <div class="desc"><del>head-mounted display</del> handmade markdown decoder</div>
     </div>
 
     <div id="container">
