Update sample page Remove TabCharacter option

--- a/sample/index.html
+++ b/sample/index.html
@@ -65,7 +65,16 @@
   </div>
 
   <div id="container" class="container">
-    <textarea id="source" class="source box hmd-markdown"></textarea><div id="target" class="target box hmd-markdown"></div>
+    <textarea id="source" class="source box hmd-markdown">hmd: 마크다운 문법으로 작성된 글을 번역하는 라이브러리
+- 작성자: ricale [ricale@ricalest.net][mail]
+- [소스코드 저장소][repo]
+- [작성자 블로그][blog]
+- [hmd 소개 및 간단 가이드][guide]
+
+[mail]: mailto:ricale@ricalest.net
+[repo]: https://github.com/ricale/hmd
+[blog]: http://weblog.ricalest.net/
+[guide]: http://weblog.ricalest.net/4</textarea><div id="target" class="target box hmd-markdown"></div><div id="target" class="target box hmd-markdown"></div>
   </div>
 </body>
 </html>
