Fix bug for indent reference-style link syntax sentence Separate indentation function (create indent_helper repository)

--- a/sample/index.html
+++ b/sample/index.html
@@ -32,7 +32,10 @@
     .target.box { margin-right: 5px; border: 1px solid #000; overflow:auto; }
   </style>
 
-  <script type="text/javascript" src="../dist/hmd-0.2.8d.js"></script>
+  <script type="text/javascript" src="../dist/hmd-0.2.8.1.js"></script>
+  <!-- <script type="text/javascript" src="../lib/indent_helper/indent_helper.js"></script> -->
+  <!-- <script type="text/javascript" src="../src/hmd.js"></script> -->
+  <!-- <script type="text/javascript" src="../src/hmd-addon.js"></script> -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script type="text/javascript">
     var resizeResponsive = function() {
@@ -74,7 +77,7 @@
 [mail]: mailto:ricale@ricalest.net
 [repo]: https://github.com/ricale/hmd
 [blog]: http://weblog.ricalest.net/
-[guide]: http://weblog.ricalest.net/4</textarea><div id="target" class="target box hmd-markdown"></div><div id="target" class="target box hmd-markdown"></div>
+[guide]: http://weblog.ricalest.net/4</textarea><div id="target" class="target box hmd-markdown"></div>
   </div>
 </body>
 </html>
