--- a/sample/index.html
+++ b/sample/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link type="text/css" rel="stylesheet" href="../dist/bootstrap.customized.min.css">
+  <link type="text/css" rel="stylesheet" href="bootstrap/bootstrap.customized.css">
+  <link type="text/css" rel="stylesheet" href="bootstrap/bootstrap-theme.customized.css">
   <style type="text/css">
     html, body {
       margin: 0px;
