Update codes for publishing it to npm

--- a/sample/index.html
+++ b/sample/index.html
@@ -33,7 +33,7 @@
     .target.box { margin-right: 5px; border: 1px solid #000; overflow:auto; }
   </style>
 
-  <script type="text/javascript" src="../dist/hmd-0.2.8.1.js"></script>
+  <script type="text/javascript" src="../dist/index.js"></script>
   <!-- <script type="text/javascript" src="../lib/indent_helper/indent_helper.js"></script> -->
   <!-- <script type="text/javascript" src="../src/hmd.js"></script> -->
   <!-- <script type="text/javascript" src="../src/hmd-addon.js"></script> -->
